[tool.poetry]
name = "SMC-SSM"
version = "0.1.0"
description = ""
authors = ["Chenyang Wu"]

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.3.1"
torch = "^1.8.0"
plotly-express = "^0.4.1"
matplotlib = "^3.3.0"
tensorboard = "^2.3.0"
pandas = "^1.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
